@@ -1,12 +1,14 @@
-MD5 c979f9f07dbbb628201c70fe151a30b8 ChangeLog 2896
-MD5 2022640f2a7af649b1705031868a582e fortune-mod-gentoo-dev-20040608.ebuild 717
-MD5 2bff369d5f6f3405fed81d6bf3ced038 fortune-mod-gentoo-dev-20040907.ebuild 714
-MD5 12af63948bc87e40ffe77d70e783db19 fortune-mod-gentoo-dev-20041019.ebuild 714
-MD5 8c5cce44730aa5a97da23b1db172a7d9 fortune-mod-gentoo-dev-20050106.ebuild 733
-MD5 3918386dc4306c4e21aa0d34f3df5ca6 fortune-mod-gentoo-dev-20050503.ebuild 741
-MD5 51334b67d2cbed22e0efec4143bc6ff0 metadata.xml 245
+MD5 d30061152c1d8efa86e3e808e5edec64 ChangeLog 3047
 MD5 3501cbe50fb8208067e0c01506fba189 files/digest-fortune-mod-gentoo-dev-20040608 66
 MD5 736e1aa1ecb079ffe3004bd9d091f7dc files/digest-fortune-mod-gentoo-dev-20040907 66
 MD5 fa374c8455e7a591231f1de97c68c192 files/digest-fortune-mod-gentoo-dev-20041019 66
 MD5 a5b1d4c840025af775d5bd36721434ec files/digest-fortune-mod-gentoo-dev-20050106 66
 MD5 c68e28306dc6a7fb22cb7c15964c0942 files/digest-fortune-mod-gentoo-dev-20050503 66
+MD5 f44f46bd519612d378eec1f9506809cf files/digest-fortune-mod-gentoo-dev-20051222 66
+MD5 2022640f2a7af649b1705031868a582e fortune-mod-gentoo-dev-20040608.ebuild 717
+MD5 2bff369d5f6f3405fed81d6bf3ced038 fortune-mod-gentoo-dev-20040907.ebuild 714
+MD5 12af63948bc87e40ffe77d70e783db19 fortune-mod-gentoo-dev-20041019.ebuild 714
+MD5 8c5cce44730aa5a97da23b1db172a7d9 fortune-mod-gentoo-dev-20050106.ebuild 733
+MD5 3918386dc4306c4e21aa0d34f3df5ca6 fortune-mod-gentoo-dev-20050503.ebuild 741
+MD5 3918386dc4306c4e21aa0d34f3df5ca6 fortune-mod-gentoo-dev-20051222.ebuild 741
+MD5 51334b67d2cbed22e0efec4143bc6ff0 metadata.xml 245
