@@ -1,1 +1,0 @@
-MD5 5d77b3af1aada9c92f45c695b63cf372 gentoo-dev-20041019.gz 26545
