@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-gentoo-dev/Attic/fortune-mod-gentoo-dev-20040608.ebuild,v 1.2 2004/06/24 22:55:10 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-gentoo-dev/Attic/fortune-mod-gentoo-dev-20051222.ebuild,v 1.1 2005/12/22 14:29:15 avenj Exp $
 
 DESCRIPTION="Fortune database of #gentoo-dev quotes"
 HOMEPAGE="http://oppresses.us/~avenj/index.html"
@@ -8,10 +8,11 @@ SRC_URI="http://oppresses.us/~avenj/files/gentoo-dev/gentoo-dev-${PV}.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ppc sparc mips alpha hppa amd64"
+KEYWORDS="alpha amd64 hppa mips ppc ppc64 sparc x86"
 IUSE=""
 
-RDEPEND="games-misc/fortune-mod"
+DEPEND="games-misc/fortune-mod"
+RDEPEND="${DEPEND}"
 
 S="${WORKDIR}"
 
