@@ -1,6 +1,11 @@
 # ChangeLog for games-misc/fortune-mod-gentoo-dev
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-gentoo-dev/ChangeLog,v 1.18 2005/08/27 18:02:31 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-gentoo-dev/ChangeLog,v 1.19 2005/12/22 14:29:15 avenj Exp $
+
+*fortune-mod-gentoo-dev-20051222 (22 Dec 2005)
+
+  22 Dec 2005; Jon Portnoy <avenj@gentoo.org> fortune-mod-gentoo-dev-20051222.ebuild :
+  Merry Christmas
 
   27 Aug 2005; Markus Rothe <corsair@gentoo.org>
   fortune-mod-gentoo-dev-20050503.ebuild:
@@ -18,7 +23,7 @@
 *fortune-mod-gentoo-dev-20050106 (06 Jan 2005)
 
   06 Jan 2005; Jon Portnoy <avenj@gentoo.org> fortune-mod-gentoo-dev-20050106.ebuild :
-  Happy New Year's.
+  Happy New Year
 
 *fortune-mod-gentoo-dev-20041019 (19 Oct 2004)
 
